--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-	"name": "@5app/package-template",
-	"version": "1.2.2",
-	"private": true,
+	"name": "@5app/fetch",
+	"version": "0.0.0",
 	"description": "Description",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"type": "module",
+	"files": [
+		"dist/*"
+	],
+	"types": "dist/index.d.ts",
 	"scripts": {
+		"build": "tsc",
 		"prepare": "husky install",
-		"lint": "eslint ./",
+		"lint": "eslint --ignore-path .gitignore ./",
 		"lint-fix": "npm run lint -- --fix",
 		"lint-diff": "LIST=`git diff-index --name-only HEAD | grep '.*\\.js$';`; if [ \"$LIST\" ]; then eslint $LIST; fi",
 		"precommit-msg": "echo 'Running pre-commit checks... (skip using --no-verify)'",
@@ -15,17 +19,20 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/5app/package-template.git"
+		"url": "git+https://github.com/5app/fetch.git"
 	},
 	"license": "ISC",
 	"bugs": {
-		"url": "https://github.com/5app/package-template/issues"
+		"url": "https://github.com/5app/fetch/issues"
 	},
-	"homepage": "https://github.com/5app/package-template#readme",
+	"homepage": "https://github.com/5app/fetch#readme",
 	"devDependencies": {
 		"@5app/semantic-release-config": "^1.0.0",
 		"@commitlint/cli": "^16.2.4",
 		"@commitlint/config-conventional": "^16.2.4",
+		"@tsconfig/node16-strictest-esm": "^1.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.22.0",
+		"@typescript-eslint/parser": "^5.22.0",
 		"eslint": "^8.15.0",
 		"eslint-config-5app": "^0.16.4",
 		"eslint-config-prettier": "^8.5.0",
@@ -33,7 +40,8 @@
 		"husky": "^8.0.0",
 		"prettier": "^2.6.2",
 		"pretty-quick": "^3.1.3",
-		"semantic-release": "^19.0.2"
+		"semantic-release": "^19.0.2",
+		"typescript": "^4.6.4"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -55,5 +63,8 @@
 	},
 	"release": {
 		"extends": "@5app/semantic-release-config"
+	},
+	"dependencies": {
+		"node-fetch": "^3.2.4"
 	}
 }
