--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "tsc",
-		"prepare": "husky install",
+		"prepare": "is-ci || husky install",
 		"lint": "eslint --ignore-path .gitignore ./",
 		"lint-fix": "npm run lint -- --fix",
 		"lint-diff": "LIST=`git diff-index --name-only HEAD | grep '.*\\.js$';`; if [ \"$LIST\" ]; then eslint $LIST; fi",
@@ -38,6 +38,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^8.0.0",
+		"is-ci": "^3.0.1",
 		"prettier": "^2.6.2",
 		"pretty-quick": "^3.1.3",
 		"semantic-release": "^19.0.2",
