--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"lint-fix": "npm run lint -- --fix",
 		"lint-diff": "LIST=`git diff-index --name-only HEAD | grep '.*\\.js$';`; if [ \"$LIST\" ]; then eslint $LIST; fi",
 		"precommit-msg": "echo 'Running pre-commit checks... (skip using --no-verify)'",
-		"test": "echo 'implement tests'"
+		"test": "npm run build"
 	},
 	"repository": {
 		"type": "git",
@@ -27,22 +27,22 @@
 	},
 	"homepage": "https://github.com/5app/fetch#readme",
 	"devDependencies": {
-		"@5app/semantic-release-config": "^1.0.0",
-		"@commitlint/cli": "^16.2.4",
-		"@commitlint/config-conventional": "^16.2.4",
-		"@tsconfig/node16-strictest-esm": "^1.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.22.0",
-		"@typescript-eslint/parser": "^5.22.0",
-		"eslint": "^8.15.0",
+		"@5app/semantic-release-config": "^1.0.1",
+		"@commitlint/cli": "^17.0.3",
+		"@commitlint/config-conventional": "^17.0.3",
+		"@tsconfig/node16-strictest-esm": "^1.0.3",
+		"@typescript-eslint/eslint-plugin": "^5.32.0",
+		"@typescript-eslint/parser": "^5.32.0",
+		"eslint": "^8.21.0",
 		"eslint-config-5app": "^0.16.4",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"husky": "^8.0.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"husky": "^8.0.1",
 		"is-ci": "^3.0.1",
-		"prettier": "^2.6.2",
+		"prettier": "^2.7.1",
 		"pretty-quick": "^3.1.3",
-		"semantic-release": "^19.0.2",
-		"typescript": "^4.6.4"
+		"semantic-release": "^19.0.3",
+		"typescript": "^4.7.4"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -66,6 +66,6 @@
 		"extends": "@5app/semantic-release-config"
 	},
 	"dependencies": {
-		"node-fetch": "^3.2.4"
+		"node-fetch": "^3.2.10"
 	}
 }
