--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ workflows:
         jobs:
             - test
             - release:
-                  context: org-global
+                  context: github-release
                   requires:
                       - test
                   filters:
