--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"description": "Description",
 	"main": "dist/index.js",
 	"type": "module",
+	"engine": {
+		"node": ">=18.11.0"
+	},
 	"files": [
 		"dist/*"
 	],
@@ -28,13 +31,14 @@
 	},
 	"homepage": "https://github.com/5app/fetch#readme",
 	"devDependencies": {
-		"@5app/semantic-release-config": "^1.0.1",
+		"@5app/prettier-config": "^1.0.4",
+		"@5app/semantic-release-config": "^1.0.3",
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
-		"@tsconfig/node16-strictest-esm": "^1.0.3",
-		"@typescript-eslint/eslint-plugin": "^5.36.2",
-		"@typescript-eslint/parser": "^5.36.2",
-		"eslint": "^8.23.0",
+		"@tsconfig/node18-strictest-esm": "^1.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.41.0",
+		"@typescript-eslint/parser": "^5.41.0",
+		"eslint": "^8.26.0",
 		"eslint-config-5app": "^0.16.4",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
@@ -43,7 +47,7 @@
 		"prettier": "^2.7.1",
 		"pretty-quick": "^3.1.3",
 		"semantic-release": "^19.0.5",
-		"typescript": "^4.8.2"
+		"typescript": "^4.8.4"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -66,6 +70,7 @@
 	"release": {
 		"extends": "@5app/semantic-release-config"
 	},
+	"prettier": "@5app/prettier-config",
 	"dependencies": {
 		"node-fetch": "^3.2.10"
 	}
