chore(prettier): use @5app/prettier-config, noissue

--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,5 @@
 {
-  "automerge": true,
-  "rangeStrategy": "replace",
-  "extends": [
-    "config:base"
-  ]
+	"automerge": true,
+	"rangeStrategy": "replace",
+	"extends": ["config:base"]
 }
