--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"homepage": "https://github.com/5app/fetch#readme",
 	"devDependencies": {
+		"@5app/prettier-config": "^1.0.4",
 		"@5app/semantic-release-config": "^1.0.1",
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
@@ -66,6 +67,7 @@
 	"release": {
 		"extends": "@5app/semantic-release-config"
 	},
+	"prettier": "@5app/prettier-config",
 	"dependencies": {
 		"node-fetch": "^3.2.10"
 	}
