--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"prepare": "is-ci || husky install",
 		"lint": "eslint --ignore-path .gitignore ./",
 		"lint-fix": "npm run lint -- --fix",
-		"lint-diff": "LIST=`git diff-index --name-only HEAD | grep '.*\\.js$';`; if [ \"$LIST\" ]; then eslint $LIST; fi",
+		"lint-diff": "LIST=`git diff-index --name-only HEAD | grep '.*\\.ts$';`; if [ \"$LIST\" ]; then eslint $LIST; fi",
 		"precommit-msg": "echo 'Running pre-commit checks... (skip using --no-verify)'",
 		"spec": "npm run build",
 		"test": "npm run lint && npm run spec"
@@ -29,22 +29,22 @@
 	"homepage": "https://github.com/5app/fetch#readme",
 	"devDependencies": {
 		"@5app/prettier-config": "^1.0.4",
-		"@5app/semantic-release-config": "^1.0.1",
-		"@commitlint/cli": "^17.1.2",
-		"@commitlint/config-conventional": "^17.1.0",
-		"@tsconfig/node16-strictest-esm": "^1.0.3",
-		"@typescript-eslint/eslint-plugin": "^5.36.2",
-		"@typescript-eslint/parser": "^5.36.2",
-		"eslint": "^8.23.0",
-		"eslint-config-5app": "^0.16.4",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"husky": "^8.0.1",
+		"@5app/semantic-release-config": "^1.1.0",
+		"@commitlint/cli": "^17.7.1",
+		"@commitlint/config-conventional": "^17.7.0",
+		"@tsconfig/node18-strictest-esm": "^1.0.1",
+		"@typescript-eslint/eslint-plugin": "^6.7.0",
+		"@typescript-eslint/parser": "^6.7.0",
+		"eslint": "^8.49.0",
+		"eslint-config-5app": "^0.19.1",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"husky": "^8.0.3",
 		"is-ci": "^3.0.1",
-		"prettier": "^2.7.1",
+		"prettier": "^3.0.3",
 		"pretty-quick": "^3.1.3",
-		"semantic-release": "^19.0.5",
-		"typescript": "^4.8.2"
+		"semantic-release": "^21.1.1",
+		"typescript": "^5.2.2"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -69,6 +69,6 @@
 	},
 	"prettier": "@5app/prettier-config",
 	"dependencies": {
-		"node-fetch": "^3.2.10"
+		"node-fetch": "^3.3.2"
 	}
 }
