--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@tsconfig/node16-strictest-esm/tsconfig.json",
+	"extends": "@tsconfig/node18-strictest-esm/tsconfig.json",
 	"compilerOptions": {
 		"outDir": "dist",
 		"rootDir": "src",
@@ -7,7 +7,8 @@
 		"types": ["node"],
 		"lib": ["dom"],
 		// Generate d.ts files
-		"declaration": true
+		"declaration": true,
+		"ignoreDeprecations": "5.0"
 	},
 	"include": ["src/**/*"]
 }
